--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,20 @@
     position: absolute;
     width: 100%;
 }
+
+
+
+.card-body {
+    
+    transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+    padding: 14px 80px 18px 36px;
+    cursor: pointer;
+}
+.card-body:hover {
+    transform: scale(1.05);
+    
+}
+
+.modal-dialog {
+    border: 1px solid blue;
+}
